Adding financial resume

--- a/resume.tex
+++ b/resume.tex
@@ -138,9 +138,8 @@
     {-Developed a Chrome Extension that previews assignments \textit{before} turning them in on Canvas LMS, reducing the chance of submitting the wrong assignment\\
     -Built using JavaScript and Chrome Developer Tools\\
     -50+ users, wide pool from Georgia Tech students}
-    \project{SkillFlyer: A Crowd-Sourced Learning Platform}{}{
-    -Takes YouTube videos and ranks them through crowd sourcing by a variety of educational topics and subtopics\\
-    -Uses MongoDB as the data backend, NodeJS as the serving backend, and ReactJS as the frontend}
+    \project{Churn: Analytics on Credit Card Rewards}{}{
+    -Uses public credit card reward data and business location data to analyze and (in the future) visualize where credit card rewards can be maximized}
     \project{Portfolio Website}{}{-Utilized Node.js and React.js to build an interactive web app portfolio website\\
     -Deployed on cloud using GitHub pages}
 }
